Implement goroutine-like work-stealing, topology awareness and updated doc (#119)
This is fixing #116 plus adding Linux topology awareness